Revert "Fix flexcol definition and item alignment in Devotion tab"
This reverts commit dc5dde93d97bcf588e6ce5a44597c2777ad9d4fc.

--- a/css/trilhamarga.css
+++ b/css/trilhamarga.css
@@ -15,18 +15,6 @@
   align-items: center;
 }
 
-.trilhamarga .flexcol {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: stretch;
-}
-
-.trilhamarga .item .flexrow {
-  width: 100%;
-  align-items: flex-start;
-}
-
 /* Sheet Styles */
 .trilhamarga.sheet {
   min-height: 500px;
